# fanuc_motion_program_exec

./: .gitignore  README.md  fanuc_client.py  fanuc_log.csv  fanuc_motion_program_exec_client.py  pyproject.toml  setup.py
config/: FANUC_lrmate200id_motion_program_robot_default_config.yml  FANUC_multi_motion_program_robot_default_config.yml
doc/: common_qa.md  multi_robot_coord_setup.md  multi_robot_setup.md  roboguide_base.md  robot_setup.md
examples/: example.py  io_example.py  multi_coord_example.py  multi_example.py  read_joint_example.py
examples/robotraconteur/: example_client.py  multi_example_client.py
karel/: clear_reg.kl  hellow_world.kl  read_joints_multi.kl  record_data.kl  record_data.pc  record_data_multi.kl  record_data_old.kl  remote.kl  remote.pc  remote_2.kl  remote_multi.kl
src/fanuc_motion_program_exec/robotraconteur/: __main__.py  experimental.robotics.motion_program.robdef  fanuc_motion_program_exec_robotraconteur.py
src/fanuc_motion_program_exec_client/: __init__.py  fanuc_motion_program_exec_client.py
src/fanuc_motion_program_exec_client/robotraconteur/: _motion_program_conv.py
tools/: roboguide_base_adjust.py
tp/: EXAMPLE.LS  EXAMPLE_COOR.LS  MAIN.LS  MAINTEST.LS  MAIN_CONNECT_1.LS  MAIN_CONNECT_2.LS  MAIN_MULT.LS  TEST.LS  TEST_RECORD.LS  TMP.LS  TMPA.LS  TMPB.LS
