[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fanuc_motion_program_exec"
version = "2.0.0"
description = "Module to execute motion commands on FANUC robots and log results"
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
dependencies = [    
    "numpy",    
    "general_robotics_toolbox"
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/eric565648/fanuc_motion_program_exec"
